tests/checker/fail/unknown_receiver_type.can
describe = (Mystery) => String {
    "hello"
}

Unit => Program {
    "ok".print()
}
